[package]
name = "zenoh_carla_bridge"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.7.2-rc"
carla = "0.10.0"
serde = "1.0.188"
serde_derive = "1.0.188"
cdr = "0.2.4"
atomic_float = "0.1.0"
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
# carla-ackermann = "0.1.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.48"
arc-swap = "1.6.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
#zenoh-ros-type = "0.3.1"
zenoh-ros-type = { git = "https://github.com/evshary/zenoh-ros-type", branch = "main" }
