[tool.poetry]
name = "carla-agent"
version = "0.1.0"
description = ""
authors = ["ChenYing Kuo <evshary@gmail.com>"]
readme = "README.md"
packages = [{include = "carla_agent"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
carla = "0.9.14"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
